--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,9 @@ canvas {
 * {
   box-sizing: border-box;
 }
+
+.selectBox {
+  border: 1px solid #55aaff;
+  background-color: rgba(75, 160, 255, 0.3);
+  position: fixed;
+}
