--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,9 @@ canvas {
   box-sizing: border-box;
 }
 
-.selectBox {
-  border: 1px solid #55aaff;
-  background-color: rgba(75, 160, 255, 0.3);
+#selectbox {
+  border: 1px solid white;
+  opacity: 0.9;
   position: fixed;
 }
 
