--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,58 @@ button {
   font-size: 12pt;
   cursor: pointer;
 }
+#intro {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+#intro div {
+  width: 500px;
+  height: 300px;
+  padding: 4px;
+  background-color: #333;
+  border: solid 1px white;
+  text-align: center;
+}
+
+#cookpot_overlay {
+  pointer-events: none;
+  position: fixed;
+  width: 60px;
+  height: 8px;
+  border: solid 1px white;
+  padding: 1px;
+  display: none;
+}
+#cookpot_overlay div {
+  width: 100%;
+  height: 100%;
+  background-color: lightgreen;
+}
+
+a:visited,a:hover,a {
+  color: white
+}
+#gameover {
+  position: fixed;
+  pointer-events: none;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+#gameover div {
+  display: none;
+  width: 500px;
+  height: 300px;
+  padding: 4px;
+  background-color: #333;
+  border: solid 1px white;
+  text-align: center;
+}
